--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -103,8 +103,8 @@
       <div data-i18n="[html]banner#long-connecting">
         <strong>Oh no!</strong> You seem to be having trouble connecting!<br>
         Download the latest version of Psiphon from the
-        <a class="about-info-url" href="#">download site</a>
-        or by sending an email to <a class="about-email" href="#"></a>
+        <a class="NewVersionURL" href="#">download site</a>
+        or by sending an email to <a class="NewVersionEmail" href="#"></a>
       </div>
     </div>
   </div>
@@ -594,12 +594,12 @@
               <p data-i18n="feedback#top_para_1">
                 Please let us know how Psiphon is working for you so we can make the system better!
               </p>
-              <p data-i18n="[html]feedback#top_para_2" class="hidden">
+              <p data-i18n="[html]feedback#top_para_2">
                 Many problems can be fixed by downloading the latest version. You can
                 <a class="NewVersionURL" href="#">download the latest version by clicking here</a>,
                 or you can send an email to <a class="NewVersionEmail" href="#"></a>.
               </p>
-              <p data-i18n="[html]feedback#top_para_3" style="display: none;">
+              <p data-i18n="[html]feedback#top_para_3">
                 You can also find solutions to many common problems in our
                 <a class="FaqURL" href="#">Frequently Asked Questions</a>.
               </p>
@@ -733,14 +733,14 @@
           <p data-i18n="[html]about#visit-download-site">
             To <strong>download a new version</strong> of Psiphon, or to
             <strong>get help and more information</strong>, please
-            <a class="about-info-url" href="#">visit the website</a>.
+            <a class="InfoURL" href="#">visit the website</a>.
           </p>
           <p>
             <span data-i18n="[html]about#get-by-email">
               <strong>If the website is inaccessible</strong>, you can get a new
               version of Psiphon by sending an email to:
             </span>
-            <a class="about-email" href="#"></a>
+            <a class="NewVersionEmail" href="#"></a>
           </p>
         </div><!-- /about-pane -->
 
