--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -15758,12 +15758,12 @@ $(function() {
     $(this).addClass('selected');
   });
 
-  // The links in the text will be set correctly elsewhere.
-
   $('#feedback-submit').click(function(e) {
     e.preventDefault();
     sendFeedback();
   });
+
+  // The sponsor-specific links in the text will be set correctly elsewhere.
 });
 
 function sendFeedback() {
@@ -15798,6 +15798,7 @@ function sendFeedback() {
   // Show (and hide) the success alert
   displayCornerAlert($('#feedback-success-alert'));
 }
+
 
 /* LOG MESSAGES **************************************************************/
 
@@ -15840,6 +15841,7 @@ function addLogMessage(obj) {
   }
 }
 
+
 /* LANGUAGE ******************************************************************/
 
 var RTL_LOCALES = ['devrtl', 'fa', 'ar'];
@@ -15875,7 +15877,7 @@ function switchLocale(locale, initial) {
     // we're loading from an object and not a remote resource). But we want this
     // code to run after everything else is done, so we'll force it to be async.
 
-    setTimeout(function() {
+    nextTick(function() {
       $('body').i18n();
 
       // The content of elements will have changed, so trigger custom event that can
@@ -15890,7 +15892,7 @@ function switchLocale(locale, initial) {
 
       // Remember the user's choice
       setCookie('language', locale);
-    }, 1);
+    });
   });
 
   //
@@ -15947,7 +15949,7 @@ function populateLocales() {
       $("#locale-template"),
       { localeCode: locales[i],
         localeName: window.PSIPHON.LOCALES[locales[i]].name},
-      { append:true });
+      { append: true });
   }
 
   // Set up the click handlers
@@ -15960,9 +15962,7 @@ function populateLocales() {
 
 /* ABOUT *********************************************************************/
 
-// Note that this is called before the DOM is fully loaded.
-(function() {
-})();
+// No special code. Sponsor-specific links are set elsewhere.
 
 
 /* HELPERS *******************************************************************/
@@ -16076,11 +16076,12 @@ function displayCornerAlert(elem) {
   });
 }
 
-// Check the current browser version number. `version` must be something like "lt-ie8".
+// Check the current browser version number. `versionCompare` must be one of:
+// lt-ie9 lt-ie8 lt-ie7
 // Return value is boolean.
 // Note that this isn't super flexible yet. It will need to be improved as it's used.
-function browserCheck(version) {
-  return $('html').hasClass(version);
+function browserCheck(versionCompare) {
+  return $('html').hasClass(versionCompare);
 }
 
 //
