Added overkill connect animation

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -9235,6 +9235,14 @@ body[dir="rtl"] .main-nav .multiline-tab-icon {
   transition: opacity 0.1s linear;
 }
 /* CONNECT */
+#connection-pane {
+  overflow: hidden;
+}
+#connection-pane .connect-animation {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+}
 #connect-toggle {
   max-width: 600px;
   position: relative;
@@ -9249,6 +9257,7 @@ body[dir="rtl"] .main-nav .multiline-tab-icon {
   padding: 30px 15%;
   width: 70%;
   background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.9);
   text-transform: uppercase;
 }
 #connect-toggle > .connect-toggle-content .state-symbol {
@@ -9473,9 +9482,6 @@ body[dir="rtl"] .vpn-incompatible-msg.label {
 .egress-region-combo-container #EgressRegionCombo {
   position: relative;
   left: -50%;
-}
-#connection-pane {
-  overflow-x: hidden;
 }
 #EgressRegionCombo > a {
   padding: 0;
@@ -15364,6 +15370,39 @@ function connectToggleSetup() {
   $window.on(CONNECTED_STATE_CHANGE_EVENT, updateConnectToggle);
 }
 
+$.fn.animateRotate = function(angle, duration, easing, complete) {
+  var args = $.speed(duration, easing, complete);
+  var step = args.step;
+  return this.each(function(i, e) {
+    args.complete = $.proxy(args.complete, e);
+    args.step = function(now) {
+      $.style(e, 'transform', 'rotate(' + now + 'deg)');
+      if (step) return step.apply(e, arguments);
+    };
+
+    $({deg: 0}).animate({deg: angle}, args);
+  });
+};
+
+function connectAnimation(start, untilStateChangeFrom) {
+  function connectAnimate() {
+    $('#connection-pane .connect-animation').fadeIn().animateRotate(
+      360,
+      2000,
+      'swing',
+      function() {
+        if (g_lastState === untilStateChangeFrom) {
+          nextTick(connectAnimate);
+        }
+        else {
+          $(this).fadeOut(1000);
+        }
+      });
+  }
+
+  connectAnimate();
+}
+
 // Update the main connect button, as well as the connection indicator on the tab.
 function updateConnectToggle() {
   $('.connect-toggle-content').each(function() {
@@ -15379,6 +15418,7 @@ function updateConnectToggle() {
       $('.connect-toggle-content[data-connect-state="starting"] .icon-stack-base, .connect-toggle-content[data-connect-state="starting"] .state-word'),
       'in-progress',
       g_lastState);
+    connectAnimation(true, g_lastState);
   }
   else if (g_lastState === 'connected') {
   }
@@ -16865,6 +16905,10 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
 
         <!-- CONNECTION ================================================-->
         <div class="tab-pane active fade in" id="connection-pane">
+          <div class="connect-animation" style="display:none">
+            <img src="scope.png">
+          </div>
+
           <div id="connect-toggle">
 
             <div class="connect-toggle-content z-behind well text-center"
