--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -200,6 +200,10 @@
 
         <!-- CONNECTION ================================================-->
         <div class="tab-pane active fade in" id="connection-pane">
+          <div class="connect-animation" style="display:none">
+            <img src="scope.png">
+          </div>
+
           <div id="connect-toggle">
 
             <div class="connect-toggle-content z-behind well text-center"
