Fixed RTL. Made sharper 'Best' region image.

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -9249,8 +9249,8 @@ body[dir="rtl"] .main-nav .multiline-tab-icon {
   top: 0;
   margin: auto;
   overflow: hidden;
-  padding: 30px 15%;
-  width: 70%;
+  padding: 30px 10%;
+  width: 78%;
   background-color: #ffffff;
   text-transform: uppercase;
 }
@@ -9397,7 +9397,7 @@ body[dir="rtl"] #connect-toggle > .connect-toggle-content .state-symbol i {
 }
 #connect-toggle a {
   min-width: 10em;
-  font-size: 2em;
+  font-size: 1.5em;
   padding: 0.6em 1em;
   white-space: nowrap;
   overflow-x: hidden;
@@ -9501,9 +9501,9 @@ body[dir="rtl"] .vpn-incompatible-msg.label {
 #EgressRegionCombo .btn .flag {
   display: block;
   width: auto;
-  background-image: url(flags32.png);
   background-repeat: no-repeat;
   filter: none;
+  background-image: url(flags32.png);
 }
 body[dir="ltr"] #EgressRegion .flag,
 body[dir="ltr"] #EgressRegionCombo ul .flag,
@@ -9517,13 +9517,12 @@ body[dir="rtl"] #EgressRegionCombo .btn .flag {
   padding: 0 40px 0 0;
   background-position-x: 98%;
 }
-.f16 .unknown {
-  background-image: url(flag_unknown_16.png) !important;
-  background-repeat: no-repeat;
-}
-.f32 .unknown {
-  background-image: url(flag_unknown_32.png) !important;
-  background-repeat: no-repeat;
+#EgressRegion .flag.unknown,
+#EgressRegionCombo ul .flag.unknown,
+#EgressRegionCombo .btn .flag.unknown {
+  background-image: url(flag_unknown_64.png);
+  background-size: contain;
+  background-image: url(flag_unknown_32.png) \9;
 }
 /* FEEDBACK */
 .feedback-smiley-container {
@@ -15319,9 +15318,18 @@ function resizeConnectContent() {
   var parentWidth = $('#connect-toggle').parent().innerWidth() -
                       (parseFloat($('#connect-toggle').parent().css('padding-left')) || 0) -
                       (parseFloat($('#connect-toggle').parent().css('padding-right')) || 0);
-  $('#connect-toggle').css(
-    'left',
-    ((parentWidth - $('#connect-toggle').outerWidth()) / 2.0)+'px');
+  if (g_isRTL) {
+    $('#connect-toggle').css({
+      right: ((parentWidth - $('#connect-toggle').outerWidth()) / 2.0)+'px',
+      left: ''
+    });
+  }
+  else {
+    $('#connect-toggle').css({
+      left: ((parentWidth - $('#connect-toggle').outerWidth()) / 2.0)+'px',
+      right: ''
+    });
+  }
 }
 
 function connectToggleSetup() {
